@@ -6,24 +6,27 @@ extern gint apl_out;
 extern gint apl_err;
 extern gint sockfd;
 
-void set_socket_cb (void (*cb)(gchar *text));
+typedef void (*socket_fcn)(gchar *text, void *tw);
+  
+void     set_socket_cb (socket_fcn, void *tw);
+//void     set_socket_cb (void (*cb)(gchar *text, void *tw), void *tw);
 
-int is_at_prompt ();
+int      is_at_prompt ();
 
-ssize_t get_prompt_len ();
+ssize_t  get_prompt_len ();
 
-void reset_prompt_len ();
+void     reset_prompt_len ();
 
 gboolean apl_read_out (gint         fd,
                        GIOCondition condition,
                        gpointer     user_data);
 
 gboolean apl_read_err (gint         fd,
-                       GIOCondition condition,
-                       gpointer     user_data);
+		       GIOCondition condition,
+		       gpointer     user_data);
 
-void apl_send_inp (gchar  *text,
-                   ssize_t sz);
+void     apl_send_inp (gchar  *text,
+		       ssize_t sz);
 
 
 /* copied from <aplsrc>/src/NamedObject.hh */
