@@ -1,5 +1,7 @@
 2014-08-29  Chris Moller  <moller@mollerware.com>
 
+	* edit.c: Added multi-window stuff.
+
 	* menu.c (open_object_cb): Temporarily remove variable edit.
 
 2014-08-28  Chris Moller  <moller@mollerware.com>
